--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.js" defer></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tic Tac Toe</title>
 </head>
 <body>
-  
+  <div class="container">
+    <canvas id="gameBoard" height="300" width="300"></canvas>
+  </div>
 </body>
 </html>
