--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div class="container">
+    <h1>Tic Tac Toe</h1>
     <canvas id="gameBoard" height="300" width="300"></canvas>
   </div>
 </body>
