--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="container">
     <h1>Tic Tac Toe</h1>
     <canvas id="gameBoard" height="300" width="300"></canvas>
+    <button id="resetGame" class="btn btn-danger">Reset</button>
   </div>
 </body>
 </html>
