--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <h1>Tic Tac Toe</h1>
     <canvas id="gameBoard" height="300" width="300"></canvas>
     <button id="resetGame" class="btn btn-danger">Reset</button>
+    <div id="player-turn"></div>
+    <div id="player-1-wins">
+      <h2>X wins!!!</h2>
+    </div>
+    <div id="player-2-wins">
+      <h2>O wins!!!</h2>
+    </div>
+    <div id="draw">
+      <h2>Looks like we have a draw...</h2>
+    </div>
   </div>
 </body>
 </html>
