add css styling to gameboard and spacing to turn display and reset button
Co-authored-by: Matt McFarland <mrmcfarland@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
   <div class="container">
     <h1>Tic Tac Toe</h1>
-    <canvas id="gameBoard" height="300" width="300"></canvas>
+    <div id="canvas">
+      <canvas id="gameBoard" height="300" width="300"></canvas>
+    </div>
     <button id="resetGame" class="btn btn-danger">Reset</button>
     <div id="player-turn"></div>
     <div id="player-1-wins">
